fixed horizontal scrolling on projects section

--- a/src/components/Projects/ProjectPreview/project-preview.scss
+++ b/src/components/Projects/ProjectPreview/project-preview.scss
@@ -9,8 +9,11 @@
       padding: 0 20px;
     }
     .project-preview-image {
+      animation: fadeIn;
       display: none;
+      animation-fill-mode: forwards;
       @media(min-width: $tablet-width) {
+        opacity: 0;
         position: absolute;
         display: inline-block;
         width: 49%;
